Changed up to which course (beginner, Python)

--- a/Spotify New/index.Rmd
+++ b/Spotify New/index.Rmd
@@ -162,7 +162,7 @@ The following list shows the DataCamp courses for the `Python` data science trac
 The same applies to the advanced courses. Here, too, the specified courses should be processed in the given order. Since it can of course happen that you have already mastered the topics of an advanced course, individual courses can be replaced. The topics of the advanced courses are given in brief. If these key points seem familiar to you, then take a look at the table of contents of the corresponding DataCamp course.
 If you are convinced that this course does not provide any added value for you, it can be replaced by one of the courses in the "Exchange Pool" (see list). However, this course should not be processed until all other courses in the intermediate `Python` course have been completed.
 
-Both beginners and advanced learners must have completed at least two thirds of the curriculum in order to receive the certificate. For beginners this means at least up to the course [Merging DataFrames with pandas (4h)](https://learn.datacamp.com/courses/merging-dataframes-with-pandas) (including this course) and for advanced learners at least up to the [Exploratory Data Analysis in Phyton (4h)](https://learn.datacamp.com/courses/exploratory-data-analysis-in-python) (including this course). In addition, at least two thirds of the project tasks have to be completed.
+Both beginners and advanced learners must have completed at least two thirds of the curriculum in order to receive the certificate. For beginners this means at least up to the course [Joining Data with pandas (4h)](https://learn.datacamp.com/courses/joining-data-with-pandas) (including this course) and for advanced learners at least up to the [Exploratory Data Analysis in Phyton (4h)](https://learn.datacamp.com/courses/exploratory-data-analysis-in-python) (including this course). In addition, at least two thirds of the project tasks have to be completed.
 			
 
 
